--- a/GEP1_test.cfg
+++ b/GEP1_test.cfg
@@ -1,24 +1,23 @@
 # Input the run-list below. Just CODA run-numbers, one entry per line. You have to set 'use_runlist' appropriately below specifying whether or not to used the following ru-list.
-3320
+3051
 endlist
 
 # Input global cuts below #
-#abs(heep.dxECAL-0.03)<0.06
-#abs(heep.dyECAL-0.023)<0.08
-#abs(heep.dt_ADC-115)<20.0
-#abs(heep.dpp+0.12)<0.1
-#sbs.gemFT.track.chi2ndf[0]<30
-#sbs.gemFT.track.nhits[0]>4||sbs.gemFT.track.chi2ndf[0]<15
-#abs(sbs.tr.x[0]+sbs.tr.th[0]*sbs.z_bcp[30]-sbs.x_bcp[30]+0.076)<0.21
-#abs(sbs.tr.y[0]+sbs.tr.ph[0]*sbs.z_bcp[30]-sbs.y_bcp[30])<0.21
-sbs.gemFT.track.nhits[0]>4
+abs(heep.dxECAL-0.03)<0.06
+abs(heep.dyECAL-0.023)<0.08
+abs(heep.dt_ADC-115)<20.0
+abs(heep.dpp+0.12)<0.1
+sbs.gemFT.track.chi2ndf[0]<30
+sbs.gemFT.track.nhits[0]>4||sbs.gemFT.track.chi2ndf[0]<15
+abs(sbs.tr.x[0]+sbs.tr.th[0]*sbs.z_bcp[30]-sbs.x_bcp[30]+0.076)<0.21
+abs(sbs.tr.y[0]+sbs.tr.ph[0]*sbs.z_bcp[30]-sbs.y_bcp[30])<0.21
 endcut
 
 #Set absolute path of the mass-replay output below.
-input_dir /lustre24/expphy/volatile/halla/sbs/adr/gep-parsed/GEP1/testing
+input_dir /lustre24/expphy/volatile/halla/sbs/sbs-gep/GEP_REPLAYS/GEP1/LH2/bigprod_Apr30/rootfiles
 
 #Set absolte path of the directory you want to store your output.
-output_dir /lustre24/expphy/volatile/halla/sbs/adr/gep-parsed/GEP1/output
+output_dir /lustre24/expphy/volatile/halla/sbs/adr/gep-parsed/GEP1/LH2/bigprod_Apr30
 
 #Output file name if you are making a single ROOT file from the parsed data.
-output_filename test_GEP1.root
+output_filename GEP1_LH2_bigbrod_Apr30.root
